[tool.poetry]
name = "ble-rtls-worker"
version = "0.1.0"
description = ""
authors = ["Andre Lara <devandrelara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
